--- a/style.css
+++ b/style.css
@@ -13,8 +13,14 @@ body {
     }
   nav {
       display: flex;
+      margin-bottom: 1rem;
+      border-bottom: 1px solid oklch(80% 3% 200);
     }
   
   nav a {
       flex: 1; 
+      text-decoration: none;
+      color: inherit; 
+      text-align: center; 
+      padding: 0.5em;
     }
