--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
+:root {
+  --color-accent: oklch(65% 50% 0);
+  }
+
+html {
+  accent-color: var(--color-accent);
+  }
+
 body {
     /* Set line height to 1.5 times the font size
          and use the OS’s UI font as the website font
@@ -28,3 +36,8 @@ body {
       border-bottom: 0.4em solid oklch(90% 3% 200); /* Thick bottom border for current page */
       padding-bottom: 0.1em; /* Reduce bottom padding to balance the border height */
     }
+    nav a:hover {
+      border-bottom: 0.4em solid var(--color-accent);
+      background-color: oklch(from var(--color-accent) 95% 5% h);
+      padding-bottom: 0.1em;
+  }
