--- a/style.css
+++ b/style.css
@@ -42,4 +42,7 @@ body {
       border-bottom: 0.4em solid var(--color-accent);
       background-color: oklch(from var(--color-accent) 95% 5% h);
       padding-bottom: 0.1em;
-  }
+    }
+  input, textarea, button {
+    font: inherit;
+    }
