--- a/style.css
+++ b/style.css
@@ -53,5 +53,6 @@ body {
       display: block;
       width: 100%; 
       box-sizing: border-box; 
-      margin-block: 0.05em;
+      margin-block: 0em;
+      font-weight: bold;
     }
