--- a/style.css
+++ b/style.css
@@ -50,7 +50,16 @@ body {
   form {
     display: grid;
     grid-template-columns: auto 1fr; 
+    gap: 1em;
     }
   label {
-    grid-template-columns: subgrid
-  }
+    grid-column: 1;
+    }
+  input,
+  textarea, 
+  button {
+    grid-column: 2;
+    }
+  button {
+    grid-column: 1 / -1;
+    }
