--- a/style.css
+++ b/style.css
@@ -54,12 +54,17 @@ body {
     }
   label {
     grid-column: 1;
+    margin: 0;
+    align-self: center;
     }
   input,
   textarea, 
   button {
     grid-column: 2;
+    margin: 0;
+    align-self: center;
     }
   button {
     grid-column: 1 / -1;
+    margin: 0;
     }
