--- a/style.css
+++ b/style.css
@@ -8,10 +8,6 @@ html {
   }
 
 body {
-
-    /* Set line height to 1.5 times the font size
-         and use the OS’s UI font as the website font
-       */
     font: 100%/1.5 system-ui;
     max-width: 100ch;
     margin-inline: auto;
@@ -35,8 +31,8 @@ body {
       padding: 0.5em;
     }
   nav a.current {
-      border-bottom: 0.4em solid oklch(90% 3% 200); /* Thick bottom border for current page */
-      padding-bottom: 0.1em; /* Reduce bottom padding to balance the border height */
+      border-bottom: 0.4em solid oklch(90% 3% 200);
+      padding-bottom: 0.1em;
     }
   nav a:hover {
       border-bottom: 0.4em solid var(--color-accent);
@@ -48,15 +44,17 @@ body {
     }
   
   form {
-    display: grid;
+    display: subgrid;
     grid-template-columns: auto 1fr; 
     gap: 1em;
     }
+
   label {
     grid-column: 1;
     margin: 0;
     align-self: center;
     }
+
   input,
   textarea, 
   button {
