--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ body {
     }
   
   form {
-    display: subgrid;
+    display: grid;
     grid-template-columns: auto 1fr; 
     gap: 1em;
     }
