--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ body {
   
   form {
     display: grid;
-    grid-template-columns: auto 1fr; 
+    grid-template-columns: subgrid; 
     gap: 1em;
     }
 
@@ -66,3 +66,4 @@ body {
     grid-column: 1 / -1;
     margin: 0;
     }
+
