--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ body {
   
   form {
     display: grid;
-    grid-template-columns: subgrid; 
+    grid-template-columns: auto 1fr; 
     gap: 1em;
     }
 
@@ -66,4 +66,9 @@ body {
     grid-column: 1 / -1;
     margin: 0;
     }
-
+  .projects {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(15em, 1fr));
+    gap: 1em; /* Adds spacing between grid items */
+    padding: 1em; /* Optional: Adds some padding around the grid */
+    }
