--- a/style.css
+++ b/style.css
@@ -112,20 +112,17 @@ body {
     font-size: 200%; 
     margin-bottom: 0.5em;
     }
-  .resume-page h1 {
-    color: #00274d; /* Dark navy blue */
-    }
   
   .resume-page h2 {
-    color: #004080; /* Medium blue */
+    color: #004080; 
     }
   
   .resume-page h3 {
-    color: #0056b3; /* Lighter blue */
+    color: #0056b3;
     }
   .resume-page hr {
     border: none;
-    border-top: 2px solid #cccccc;
+    border-top: 2px solid #4a4a4a;;
     margin: 2em 0;
     width: 100%;
     }
