--- a/style.css
+++ b/style.css
@@ -45,7 +45,8 @@ body {
   
   form {
     display: grid;
-    grid-template-columns: auto 1fr; 
+  }
+   /* grid-template-columns: auto 1fr; 
     gap: 1em;
     }
 
@@ -66,6 +67,7 @@ body {
     grid-column: 1 / -1;
     margin: 0;
     }
+  */
   .projects {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(15em, 1fr)); /*check size (15em) specified */
