--- a/style.css
+++ b/style.css
@@ -45,6 +45,7 @@ body {
   
   form {
     display: grid;
+    grid-template-columns: auto 1fr;
   }
    /* grid-template-columns: auto 1fr; 
     gap: 1em;
