--- a/style.css
+++ b/style.css
@@ -53,8 +53,7 @@ body {
     grid-template-columns: subgrid;
   }
   input, textarea, button {
-    display: grid;
-    grid-template-columns: subgrid;
+    grid-column: 2;
   }
   button {
     grid-column: 1 / -1;
