--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ body {
    
   .projects {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(15em, 1fr)); /*check size (15em) specified */
+    grid-template-columns: repeat(auto-fill, minmax(15em, 1fr));
     gap: 1em;
     padding: 1em;
     }
