--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 
 :root {
   --color-accent: oklch(65% 50% 0);
+  color-scheme: dark light;
+  /*border-bottom-color: oklch(50% 10% 200 / 40%);*/
   }
 
 html {
@@ -21,6 +23,8 @@ body {
       display: flex;
       margin-bottom: 1rem;
       border-bottom: 1px solid oklch(80% 3% 200);
+      border-bottom-color: var(--border-color);
+      --border-color: oklch(50% 10% 200 / 40%);
     }
   
   nav a {
@@ -36,7 +40,7 @@ body {
     }
   nav a:hover {
       border-bottom: 0.4em solid var(--color-accent);
-      background-color: oklch(from var(--color-accent) 95% 5% h);
+      background-color: color-mix(in oklch, var(--color-accent), canvas 85%);
       padding-bottom: 0.1em;
     }
   input, textarea, button {
@@ -47,14 +51,16 @@ body {
     display: grid;
     grid-template-columns: auto 1fr;
     gap: 1em;
+    align-items: center;
   }
   label {
     display: grid;
     grid-template-columns: subgrid;
-    font-weight: bold;
+    font-weight: bold;  
   }
   input, textarea {
     grid-column: 2;
+    width: 100%;
   }
   button {
     grid-column: 1 / -1;
@@ -119,4 +125,25 @@ body {
     border-top: 2px solid #4a4a4a;;
     margin: 2em 0;
     width: 100%;
+    }
+
+    label.color-scheme {
+      position: absolute; 
+      top: 1rem;
+      right: 1rem;
+      font-size: 80%; 
+      font-family: inherit;
+      display: flex; 
+      align-items: center; 
+      gap: 0.5rem; 
+      padding: 0.5rem;
+      border-radius: 0.25rem;
+      z-index: 100;
+    }
+    
+    label.color-scheme select {
+      font: inherit; 
+      padding: 0.2rem; 
+      border: 1px solid #ccc; 
+      border-radius: 0.25rem;
     }
