--- a/style.css
+++ b/style.css
@@ -148,9 +148,9 @@ body {
       border-radius: 0.25rem;
     }
 
-    /* #profile-stats {
-      display: grid;
-      grid-template-columns: repeat(4, 1fr);
+    #profile-stats {
+      /* display: grid; */
+      /* grid-template-columns: repeat(4, 1fr); */
       gap: 10px;
       padding: 10px;
       border: 1px solid #ccc;
@@ -167,4 +167,4 @@ body {
     #profile-stats dd {
       margin: 0;
       grid-row: 2;
-    } */
+    }
